Criação de fábricas.